[OPIK-4891] Implement applyToPast=false: restrict retention deletes to post-rule data
When applyToPast is false, the retention job only deletes data created
after the rule was created. This uses a minimum UUID v7 (IdGenerator.generateMinId)
as a lower bound (minId) so pre-existing data is preserved.

- Add IdGenerator.generateMinId() for deterministic minimum UUID v7 at a timestamp
- Refactor RetentionPolicyService to resolve per-rule cutoffId and optional minId
- Update all 4 DAOs (Trace, Span, FeedbackScore, Comment) with conditional minId clause
- Add test contrasting applyToPast=true vs false side-by-side

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>